upload source code

--- a/index.html
+++ b/index.html
@@ -292,17 +292,17 @@
             </div>
             <div class="col l-3 m-3 c-3">
               <a href="" class="product__promotion">
-                <img src="./assests/img/promo_2.jpg" alt="" class="product__promotion-img" />
+                <img src="./assests/img/bn1.jpeg" alt="" class="product__promotion-img" />
               </a>
             </div>
             <div class="col l-3 m-3 c-3">
               <a href="" class="product__promotion">
-                <img src="./assests/img/promo_2.jpg" alt="" class="product__promotion-img" />
+                <img src="./assests/img/bn2.jfif" alt="" class="product__promotion-img" />
               </a>
             </div>
             <div class="col l-3 m-3 c-3">
               <a href="" class="product__promotion">
-                <img src="./assests/img/promo_2.jpg" alt="" class="product__promotion-img" />
+                <img src="./assests/img/bn3.png" alt="" class="product__promotion-img" />
               </a>
             </div>
           </div>
