upload source code

--- a/categoryProduct.html
+++ b/categoryProduct.html
@@ -55,34 +55,34 @@
       <div class="category__heading">
         <h3 class="category__heading-tittle">DANH MỤC</h3>
       </div>
-      <ul class="category__list">
-        <li class="category__list-tittle">
-          <a href="./categoryProduct.html?raunhapkhau" class="category__list-tittle-link">Rau nhập khẩu</a>
+      <ul class="category__list mobile">
+        <li class="category__list-tittle mobile">
+          <a href="./categoryProduct.html?raunhapkhau" class="category__list-tittle-link mobile">Rau nhập khẩu</a>
         </li>
-        <li class="category__list-tittle">
-          <a href="./categoryProduct.html?hoaquatuoi" class="category__list-tittle-link"> Hoa quả tươi </a>
+        <li class="category__list-tittle mobile">
+          <a href="./categoryProduct.html?hoaquatuoi" class="category__list-tittle-link mobile"> Hoa quả tươi </a>
         </li>
-        <li class="category__list-tittle">
-          <a href="./categoryProduct.html?traicaynhapkhau" class="category__list-tittle-link"> Trái cây nhập
+        <li class="category__list-tittle mobile">
+          <a href="./categoryProduct.html?traicaynhapkhau" class="category__list-tittle-link mobile"> Trái cây nhập
             khẩu</a>
         </li>
-        <li class="category__list-tittle">
-          <a href="./categoryProduct.html?namcacloai" class="category__list-tittle-link"> Nấm các loại</a>
+        <li class="category__list-tittle mobile">
+          <a href="./categoryProduct.html?namcacloai" class="category__list-tittle-link mobile"> Nấm các loại</a>
         </li>
-        <li class="category__list-tittle">
-          <a href="./categoryProduct.html?hoaquadalat" class="category__list-tittle-link"> Hoa quả Đà Lạt</a>
+        <li class="category__list-tittle mobile">
+          <a href="./categoryProduct.html?hoaquadalat" class="category__list-tittle-link mobile"> Hoa quả Đà Lạt</a>
         </li>
-        <li class="category__list-tittle">
-          <a href="./categoryProduct.html?rautuoisach" class="category__list-tittle-link"> Rau tươi sạch</a>
+        <li class="category__list-tittle mobile">
+          <a href="./categoryProduct.html?rautuoisach" class="category__list-tittle-link mobile"> Rau tươi sạch</a>
         </li>
-        <li class="category__list-tittle">
-          <a href="./categoryProduct.html?cacloaicuqua" class="category__list-tittle-link"> Các loại củ quả</a>
+        <li class="category__list-tittle mobile">
+          <a href="./categoryProduct.html?cacloaicuqua" class="category__list-tittle-link mobile"> Các loại củ quả</a>
         </li>
-        <li class="category__list-tittle">
-          <a href="./categoryProduct.html?taocacloai" class="category__list-tittle-link"> Táo các loại </a>
+        <li class="category__list-tittle mobile">
+          <a href="./categoryProduct.html?taocacloai" class="category__list-tittle-link mobile"> Táo các loại </a>
         </li>
-        <li class="category__list-tittle">
-          <a href="./categoryProduct.html?hoaquasaykho" class="category__list-tittle-link"> Hoa quả sấy khô</a>
+        <li class="category__list-tittle mobile">
+          <a href="./categoryProduct.html?hoaquasaykho" class="category__list-tittle-link mobile"> Hoa quả sấy khô</a>
         </li>
       </ul>
     </nav>
@@ -101,7 +101,7 @@
 
         <div class="category_wrap col l-3 m-12 c-12" id="category_wrap">
           <!-- Danh mục  -->
-          <nav class="category tier1">
+          <nav class="categoryPr tier1">
             <div class="category__heading">
               <h3 class="category__heading-tittle">DANH MỤC</h3>
             </div>
@@ -147,7 +147,7 @@
           </nav>
 
           <!-- Lọc theo màu sắc  -->
-          <nav class="category tier2">
+          <nav class="categoryPr tier2">
             <div class="category__heading">
               <h3 class="category__heading-tittle">MÀU SẮC</h3>
             </div>
@@ -181,7 +181,7 @@
           </nav>
 
           <!-- lọc theo thương hiệu  -->
-          <nav class="category tier3">
+          <nav class="categoryPr tier3">
             <div class="category__heading">
               <h3 class="category__heading-tittle">THƯƠNG HIỆU</h3>
             </div>
