--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="category__heading">
               <h3 class="category__heading-tittle">DANH MỤC</h3>
             </div>
-            <ul class="category__list">
+            <ul class="category__list mobile">
               <li class="category__list-tittle">
                 <a href="./categoryProduct.html?raunhapkhau" class="category__list-tittle-link">Rau nhập khẩu</a>
               </li>
